delete some redundant code